# p3p-ros

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
devel/.private/p3p-pkg/: .catkin
devel/.private/p3p_pkg/: .catkin  setup.sh
devel/.private/pose_estimate_3d3d/: .catkin  setup.sh
devel/.private/rPose_pkg/: .catkin  .rosinstall  local_setup.sh
devel/include/rPose_pkg/: BoundingBox.h  BoundingBoxes.h
devel/lib/p3p-pkg/: p3p-pkg_node  p3p_3d3d
devel/lib/p3p_pkg/: p3p_3d3d
logs/p3p-pkg/: build.check.001.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.005.log.stderr  build.make.007.log.stderr  build.make.011.log.stderr
logs/p3p_pkg/: build.make.000.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr
logs/pose_estimate_3d3d/: build.check.000.log.stderr  build.check.001.log.stderr  build.check.003.log.stderr  build.check.005.log.stderr  build.check.006.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr
logs/rPose_pkg/: build.cmake.001.log.stderr  build.make.007.log.stderr
src/p3p-pkg/: CMakeLists.txt
src/p3p_pkg/: CMakeLists.txt
src/p3p_pkg/launch/: p3p.launch
src/p3p_pkg/src/: p3p_3d3d.cpp
src/rPose_pkg/: CMakeLists.txt  README.md  package.xml
src/rPose_ros/: CMakeLists.txt  package.xml
(+66 files in other folders)
